# zodiac-sign-finder

./: .gitignore  LICENSE  PORTFOLIO.md  README.md  SECURITY.md  ZodiacSignFinder.spec  build.ps1  main.py  publish-to-github.ps1  pyproject.toml  requirements-build.txt
docs/screenshots/: README.md
tests/: test_zodiac_logic.py
zodiac_gui/: __init__.py  __main__.py  app.py  theme.py  zodiac_logic.py
