[project]
name = "zodiac-sign-finder"
version = "2.0.0"
description = "Desktop Western tropical zodiac sign and element finder (Python, Tkinter)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Evilm" }]
keywords = ["zodiac", "astrology", "desktop", "tkinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

[project.scripts]
zodiac-gui = "zodiac_gui.app:main"

[project.urls]
Repository = "https://github.com/Camerenjackson/zodiac-sign-finder"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["zodiac_gui*"]

[tool.setuptools.package-data]
zodiac_gui = ["py.typed"]
